--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       <div id="overlay">KLIKNIJ ABY ROZPOCZĄĆ</div>
 
       <div id="game-rules">
-        <img src="./assets/images/icon.webp" id="sLogo" class="hide" width="25%">
+        <img src="./assets/images/icon.webp" id="sLogo" class="hide" width="25%" alt="">
         <h1 id="text-logo" class="hide">MILIONERZY</h1>
         <span>KLIKNIJ ABY ZAGRAĆ</span>
       </div>
@@ -33,11 +33,11 @@
 
       <div id="main-container">
 
-        <img id="logo" src="./assets/images/icon.webp" width="150px">
+        <img id="logo" src="./assets/images/icon.webp" width="150px" alt="">
 
         <div class="question-container">
           <div class="question" id="question">Treść pytania.</div>
-          <img id="zalacznik" src="" class="hide">
+          <img id="zalacznik" src="" class="hide" alt="">
           <div class="answear-container">
             <div class="answear" id="odpa">
               A. odpowiedź
