--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+     <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest'></script>
   </head>
   <body>
 
